make sure page footer is never covered by content

--- a/app/components/Page.css
+++ b/app/components/Page.css
@@ -61,13 +61,19 @@
 
 .footer {
   position: absolute;
-  bottom: 2cm;
   width: 25.7cm;
+  /**
+   * push down so it is never covered
+   * by content
+   */
+  bottom: 1.8cm;
 }
 
 .footer p {
   position: relative;
   float: left;
+  /* push down as far as possible */
+  margin-bottom: 0;
 }
 
 .footer p:last-of-type {
